--- a/app/z-solana-indexer/Cargo.toml
+++ b/app/z-solana-indexer/Cargo.toml
@@ -10,6 +10,8 @@ solana-transaction-status = { workspace = true }
 solana-client = { workspace = true }
 carbon-helius-atlas-ws-datasource = { workspace = true }
 carbon-pumpfun-decoder = { workspace = true }
+carbon-raydium-amm-v4-decoder = { workspace = true }
+carbon-meteora-dlmm-decoder = { workspace = true }
 
 helius = { version = "0.2.2" }
 tokio = { version = "1.40.0", features = ["full"] }
