--- a/app/z-solana-indexer/Cargo.toml
+++ b/app/z-solana-indexer/Cargo.toml
@@ -25,3 +25,4 @@ rdkafka = "0.29"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0.138"
 chrono = "0.4"
+solana-program = "1.17"
